tests/specs/ecosystem/hinw/vdf_parser/1_1_6.test
hinw/vdf-parser/1.1.6
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'BufferEncoding'.
  override _transform(chunk: string, encoding: BufferEncoding, callback: stream.TransformCallback): void {}
                                               ~~~~~~~~~~~~~~
    at file://<tmpdir>/src/parser.ts:126:48

error: Type checking failed.

